--- a/contacto.html
+++ b/contacto.html
@@ -82,6 +82,7 @@
           </nav>
         </div>
       </div>
-    </footer>
+    </footer>    
+    <script src="js/modernizr.js"></script>
   </body>
 </html>
