--- a/cursos.html
+++ b/cursos.html
@@ -116,6 +116,7 @@
           </nav>
         </div>
       </div>
-    </footer>
+    </footer>    
+    <script src="js/modernizr.js"></script>
   </body>
 </html>
