--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           </nav>
         </div>
       </div>
-    </footer>
+    </footer>    
+    <script src="js/modernizr.js"></script>
   </body>
 </html>
