--- a/nosotros.html
+++ b/nosotros.html
@@ -67,6 +67,7 @@
           </nav>
         </div>
       </div>
-    </footer>
+    </footer>    
+    <script src="js/modernizr.js"></script>
   </body>
 </html>
